# fraud_detection

./: README.md  pyproject.toml
data_creator/: __init__.py  data_cleaner.py  train_test_data_creator.py
data_visualizers/: boxplots.py  violinplots.py
fraud_detector/: __init__.py  fraud_detector.py  transactions_over_time.py
information_and_metrics/: __init__.py  confusion_matrix.py  confusion_matrix_metrics.py  metrics_per_observed_fraud_rate.py
scenarios/: RQ2_metrics_per_observed_fraud_rate.py  RQ3_metrics_over_time.py  biased_vs_random.py  metrics_over_time.py  test.py
scenarios/RQ2/: RQ2_metrics_per_observed_fraud_rate.py  RQ2_random_sampling.py  biased_vs_random.py
visualizations/: __init__.py  boxplots.py  violinplots.py
