[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["renee@datenna.com <renee@datenna.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
datacleaner = "^0.1.5"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
fairlearn = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
